--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,7 +115,7 @@ jobs:
           github-token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
           previews: luke-cage-preview
           script: |
-            github.repos.updateBranchProtection({
+            const result = await github.repos.updateBranchProtection({
               owner: context.repo.owner,
               repo: context.repo.repo,
               branch: 'master',
@@ -124,6 +124,7 @@ jobs:
               enforce_admins: null,
               required_pull_request_reviews: null
             })
+            console.log(result)
       #   run: |
       #     ownerWithRepo="jbeveland27/prototype-nr1-actions"
       #     branch="master"
@@ -155,7 +156,7 @@ jobs:
           github-token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
           previews: luke-cage-preview
           script: |
-            github.repos.updateBranchProtection({
+            const result = await github.repos.updateBranchProtection({
               owner: context.repo.owner,
               repo: context.repo.repo,
               branch: 'master',
@@ -166,6 +167,7 @@ jobs:
                 required_approving_review_count: 1
               }
             })
+            console.log(result)
         # run: |
         #   ownerWithRepo="jbeveland27/prototype-nr1-actions"
         #   branch="master"
@@ -183,7 +185,7 @@ jobs:
       
       - name: Re-enable branch protection - result
         run: |
-          echo "${{ steps.enable-branch-protection.outputs.result }}
+          echo "${{ steps.enable-branch-protection.outputs.result }}"
 
   job-generate-release:
     runs-on: ubuntu-latest
@@ -221,7 +223,7 @@ jobs:
           github-token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
           previews: luke-cage-preview
           script: |
-            github.repos.updateBranchProtection({
+            const result = await github.repos.updateBranchProtection({
               owner: context.repo.owner,
               repo: context.repo.repo,
               branch: 'master',
@@ -230,6 +232,7 @@ jobs:
               enforce_admins: null,
               required_pull_request_reviews: null
             })
+            console.log(result)
         # run: |
         #   ownerWithRepo="jbeveland27/prototype-nr1-actions"
         #   branch="master"
@@ -260,7 +263,7 @@ jobs:
           github-token: ${{ secrets.NEWRELIC_BOT_TOKEN }}
           previews: luke-cage-preview
           script: |
-            github.repos.updateBranchProtection({
+            const result = await github.repos.updateBranchProtection({
               owner: context.repo.owner,
               repo: context.repo.repo,
               branch: 'master',
@@ -271,6 +274,7 @@ jobs:
                 required_approving_review_count: 1
               }
             })
+            console.log(result)
         # run: |
         #   ownerWithRepo="jbeveland27/prototype-nr1-actions"
         #   branch="master"
@@ -290,4 +294,4 @@ jobs:
       
       - name: Re-enable branch protection - result
         run: |
-          echo "${{ steps.enable-branch-protection.outputs.result }}
+          echo "${{ steps.enable-branch-protection.outputs.result }}""
